--- a/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
@@ -13,13 +13,13 @@
     <ScrollViewer>
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="*"></RowDefinition>
+                <RowDefinition Height="1.2*"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="auto"></RowDefinition>
                 <RowDefinition Height="1*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
-                <RowDefinition Height="1.5*"></RowDefinition>
-                <RowDefinition Height="auto"></RowDefinition>
+                <RowDefinition Height="*"></RowDefinition>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"></ColumnDefinition>
@@ -53,7 +53,7 @@
                    Height="27"
                    FontSize="18"
                    FontFamily="Poppins"
-                   FontWeight="Regular"
+                   FontWeight="SemiBold"
                    HorizontalAlignment="Left">Name</Label>
                 <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
                      FontSize="15"
@@ -82,7 +82,7 @@
                    Height="27"
                    FontSize="18"
                    FontFamily="Poppins"
-                   FontWeight="Regular"
+                   FontWeight="SemiBold"
                    HorizontalAlignment="Left">Address</Label>
                 <TextBox Style="{StaticResource MaterialDesignOutlinedTextBox}"
                      FontSize="15"
@@ -111,10 +111,12 @@
                    Height="27"
                    FontSize="18"
                    FontFamily="Poppins"
-                   FontWeight="Regular"
-                   HorizontalAlignment="Left">Choose type</Label>
-                <CheckBox></CheckBox>
-                <CheckBox></CheckBox>
+                   FontWeight="SemiBold"
+                   HorizontalAlignment="Left">Choose type:</Label>
+                <RadioButton IsChecked="{Binding Restaurant}"
+                          Margin="50,0,0,0">Restaurant</RadioButton>
+                <RadioButton IsChecked="{Binding Accomodation}"
+                          Margin="50,0,0,0">Accommodation</RadioButton>
             </StackPanel>
 
             <Button Grid.Column="1"
